including the tailwind

--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "devDependencies": {
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.0",
+    "frontend": "file:",
+    "tailwindcss": "^4.1.0"
   }
 }
